# Codeoba

./: .env.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_UPDATE_SUMMARY.md  DEVELOPMENT.md  FRAMEWORK_EVALUATION.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  analysis_options.yaml  build.gradle.kts  eslint.config.js  gradle.properties  gradlew  index.html  package-lock.json  package.json  pubspec.yaml  settings.gradle.kts  vite.config.ts
.githooks/: pre-commit
.github/: changelog-config.json  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_parent.md  task_sub_issue.md
.github/workflows/: README.md  build-desktop.yml  ci-cd.yml  ci.yml  code-quality.yml  docs.yml  release.yml  security.yml
app-android/: build.gradle.kts
app-android/src/main/: AndroidManifest.xml
app-android/src/main/res/drawable/: ic_launcher_foreground.xml
app-android/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
app-android/src/main/res/mipmap-mdpi/: ic_launcher_round.xml
app-desktop/: build.gradle.kts
core/: build.gradle.kts
docs/: APP_SIGNING.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  DIAGRAMS.md  FRAMEWORK_EVAL.md  FRAMEWORK_EVALUATION.md  IMPLEMENTATION_STATUS.md  ISSUE_TRACKING.md  MCP_CONFIGURATION.md  OPENAI_REALTIME_API.md  PACKAGE_STRUCTURE.md  PHASE_1.5_ISSUES.md  PHASE_1.5_PLANNING_SUMMARY.md  PHASE_2_ISSUES.md  PHASE_2_PLANNING_SUMMARY.md  PHASE_3_TESTING.md  QUICKSTART.md  SETUP.md  TESTING_AUDIO_PLAYBACK.md  VERSION_CATALOG_MIGRATION.md  WEBRTC_IMPLEMENTATION_PLAN.md  WEBRTC_IMPLEMENTATION_SUMMARY.md  WEBVIEW_DECISION_SUMMARY.md  WEBVIEW_EVALUATION.md  android-status.md  architecture.md  dev-setup.md  menu_alignment_testing.md  mvp-summary.md  search_walkthrough.md  tokenization_calibration.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: main.dart
lib/github/: copilot_service.dart
lib/mcp/: tool_executor.dart
lib/realtime/: response_handler.dart
lib/ui/: app_state.dart  main_ui.dart
lib/ui/widgets/: connection_panel.dart  log_viewer.dart  microphone_button.dart  repository_selector.dart  status_indicator.dart
lib/webrtc/: audio_processor.dart
packaging/: com.whataicando.codeoba.yaml
scripts/: bump-version.cjs  download-assets.cjs  download-privacy.cjs  generate-keys.cjs  generate-release-body.cjs  merge-updater-manifests.cjs  prepare-installers.cjs  prune-dev-releases.cjs  rpm-sign.exp  rpm-sign.py  sandbox.md  sandbox.py  sync-version.cjs  tauri.cjs  test-menu-alignment.js  translate.cjs
src/: App.css  App.tsx  main.tsx  types.ts  window-init.ts
src-tauri/: .gitignore  Cargo.toml  clippy.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  fs_util.rs  groups.rs  keyring.rs  lib.rs  logging.rs  main.rs  menu.rs  models.rs  tokenizer.rs  tts_engine.rs  watcher.rs
src-tauri/src/parsers/: aider.rs  antigravity.rs  cache.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  mod.rs  permissions.rs  resolver.rs  source_decisions.rs  tests.rs
src-tauri/src/premium/: loopback.rs  mod.rs
src-tauri/src/search/: cache.rs  downloader.rs  lexical.rs  mod.rs  semantic.rs  tokenizer.rs
src/components/: CheckingUpdatesModal.tsx  ConsentModal.tsx  Dashboard.tsx  DetailPane.tsx  FeedbackDialog.tsx  FileViewerDialog.tsx  GroupDetailsView.tsx  LicensesDialog.tsx  MarkdownRenderer.tsx  PrivacyDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  SourceDetectedModal.tsx  TitleBar.tsx  UpdateModal.tsx
src/github/: code_generator.dart  copilot_service.dart
src/i18n/: i18n.tsx
src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pt.json  ru.json  zh-TW.json  zh.json
src/mcp/: mcp_client.dart
src/realtime/: realtime_api_client.dart  response_handler.dart
src/resources/licenses/: sil-ofl-1.1.txt
src/resources/privacy/: privacy_ar.md  privacy_de.md  privacy_en.md  privacy_es.md  privacy_fr.md  privacy_it.md  privacy_ja.md  privacy_ko.md  privacy_nl.md  privacy_pt.md  privacy_ru.md  privacy_zh-TW.md  privacy_zh.md
src/ui/: app_state.dart  main_ui.dart
src/ui/widgets/: connection_panel.dart  log_viewer.dart  microphone_button.dart  repository_selector.dart  status_indicator.dart
src/utils/: contextMenu.ts  errorHelper.ts  format.ts  highlighter.ts  kokoro_voices.json  logger.ts  messageParser.ts  sessionStatus.tsx  useSpeech.ts
src/webrtc/: audio_processor.dart  webrtc_service.dart
tests/: app_state_test.dart  mcp_test.dart  realtime_test.dart  webrtc_test.dart
(+78 files in other folders)
