[package]
name = "codeoba"
version = "0.5.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "codeoba"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codeoba_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "8"
keyring = "2"
tract-onnx = "0.23.3"
tokenizers = "0.19"
wasmtime = "24"
ed25519-dalek = "3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
uuid = { version = "1", features = ["v3", "v4", "v5"] }
tempfile = "3"
md5 = "0.8"
ndarray = "0.17"
aes-gcm = "0.10"
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["time", "sync", "rt"] }
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "stream"] }
url = "2.5"
percent-encoding = "2.3"
lazy_static = "1.4"
[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[patch.crates-io]
esaxx-rs = { git = "https://github.com/mozilla-ai/esaxx-rs-dyn-msvc", branch = "main" }


