[package]
name = "codeoba"
version = "0.8.9"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "codeoba"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
enable-help-menu = []
devtools = ["tauri/devtools"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codeoba_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
notify = "8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
uuid = { version = "1", features = ["v3", "v4", "v5"] }
tempfile = "3"
md5 = "0.8"
getrandom = "0.4"
hex = "0.4"
sha2 = "0.11"
tokio = { version = "1", features = ["time", "sync", "rt"] }
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "stream"] }
url = "2.5"
percent-encoding = "2.3"
lazy_static = "1.5"
base64 = "0.22"
rayon = "1.12.0"
souvlaki = "0.7.3"
[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[patch.crates-io]
esaxx-rs = { git = "https://github.com/mozilla-ai/esaxx-rs-dyn-msvc", branch = "main" }

# Panic-surface guardrails. `string_slice` is DENIED — byte-indexing a `&str` panics on
# a UTF-8 boundary (this caused a UI freeze); every existing site has been migrated to
# strip_prefix/strip_suffix/.get()/char-based, so any new one is a hard error in CI.
# The rest are WARN: they flag genuine robustness risks (a poisoned lock or bad input can
# panic), but the codebase has ~100 pre-existing sites to burn down before they can deny.
# DENIED (hard CI failure): these panic on runtime data.
#   string_slice  — byte-indexing a &str splits UTF-8 (this froze the app)
#   unwrap_used   — .unwrap() on None/Err; use ?, unwrap_or*, or .expect("invariant")
# WARN (visible, reviewed, not yet blocking): legitimate uses exist, burn down over time.
#   expect_used      — fine for compile-time invariants (static regex, RNG); flag runtime use
#   indexing_slicing — arr[i]; noisy, many are bounds-checked
#   panic            — panic!/todo!/unreachable!
[lints.clippy]
string_slice = "deny"
unwrap_used = "deny"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"


